--- a/style.css
+++ b/style.css
@@ -8,3 +8,21 @@ p {
     color: red;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.form-information {
+    margin: 5px;
+}
+
+.save-button {
+    margin-left: 5px;
+}
+
+.all-button {
+    margin-top: 10px;
+}
+
+.form-style {
+    border: 2px dashed red;
+    padding: 10px;
+    width: 25%;
+}
